add project done

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://lewissmatos:Silfredo2002@lewissmatos.jyhxc9y.mongodb.net/test"
 JWT_SECRET="Historyneverchanges666"
+BLOG_OWNER_EMAIL="lewissmatos@gmail.com"
+CLOUDINARY_URL=cloudinary://431929767745813:y7XVORajA2YD6_4tGq5hUyNO0FQ@dytfei7ji
+CLOUDINARY_API_KEY=431929767745813
+CLOUDINARY_API_SECRET=y7XVORajA2YD6_4tGq5hUyNO0FQ
+CLOUDINARY_ACCOUNT_ID=dytfei7ji
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dytfei7ji"
