--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"react-redux": "^9.1.2",
 		"redux": "^5.0.1",
 		"redux-persist": "^6.0.0",
-		"tailwind": "^4.0.0"
+		"tailwind": "^4.0.0",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@iconify/json": "^2.2.218",
