--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"bcrypt": "^5.1.1",
 		"cloudinary": "^2.2.0",
 		"date-fns": "^3.6.0",
+		"date-fns-tz": "^3.1.3",
 		"framer-motion": "^11.2.10",
 		"jsonwebtoken": "^9.0.2",
 		"next": "14.2.4",
