--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@next-auth/prisma-adapter": "^1.0.7",
 		"@nextui-org/react": "^2.4.1",
 		"@nextui-org/theme": "^2.2.5",
+		"@testing-library/dom": "^10.2.0",
+		"@testing-library/react-hooks": "^8.0.1",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.6",
 		"axios": "^1.7.2",
